present-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: present
  namespace: hh
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    spaceapp: iipod
    spacename: cu
  sessionAffinity: None
  type: ClusterIP
