present-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/server-snippets: |
      location / {
      proxy_set_header Upgrade $http_upgrade;
      proxy_http_version 1.1;
      proxy_set_header X-Forwarded-Host $http_host;
      proxy_set_header X-Forwarded-Proto $scheme;
      proxy_set_header X-Forwarded-For $remote_addr;
      proxy_set_header Host $host;
      proxy_set_header Connection "upgrade";
      proxy_cache_bypass $http_upgrade;
      }
  name: present
  namespace: hh
spec:
  ingressClassName: nginx
  rules:
  - host: present.cloudnative.coop
    http:
      paths:
      - backend:
          service:
            name: present
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  - host: present.cloudnative.coop
    http:
      paths:
      - backend:
          service:
            name: present
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - secretName: "global-wildcard-tls"
    hosts:
    - present.cloudnative.coop
status:
  loadBalancer:
    ingress:
    - ip: 147.75.84.159
    - ip: 147.75.86.202
